# mcpfz-probe

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
crates/mcpfz-probe/: Cargo.toml  build.rs
crates/mcpfz-probe-ebpf/: Cargo.toml
crates/mcpfz-probe-ebpf-common/: Cargo.toml
crates/mcpfz-probe-ebpf-common/src/: lib.rs
crates/mcpfz-probe-ebpf/src/: main.rs
crates/mcpfz-probe/src/: ebpf.rs  fake.rs  main.rs
docs/: architecture.md  protocol.md
examples/: ebpf_live_demo.py  events.sample.json  vulnerable_server.py
src/mcpfz_probe/: __init__.py  monitor.py  policy.py
tests/: test_monitor.py  test_policy.py  test_sidecar_integration.py
